<resources>
    <string name="app_name">BMI 2.0</string>
    <string name="calculate">Calculate</string>
    <string name="bmi">BMI</string>
    <string name="login">Login</string>
    <string name="your_email">Your e-mail</string>
    <string name="your_pass">Your password</string>
    <string name="new_user">Sign up</string>
    <string name="logo_name">SENAI</string>

    <string name="new_registration">New user registration</string>
    <string name="name">Name:</string>
    <string name="new_email">E-mail:</string>
    <string name="new_pass">Password:</string>
    <string name="new_weight">Weight:</string>
    <string name="new_height">Height:</string>
    <string name="registration_user">Create user</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_name">Name</string>
    <string name="hint_pass">Password</string>
    <string name="register_acc">register account</string>
    <string name="input_weight">Weight</string>
    <string name="input_height">Height</string>
    <string name="input_height2">Height (optional)</string>

    <string name="title">Let\'s calculate your body mass index now?</string>
    <string name="question">This is your BMI result</string>
    <string name="level01">Under weight.</string>
    <string name="level02">Ideal weight.</string>
    <string name="level03">Slightly overweight.</string>
    <string name="level04">Grade I obesity.</string>
    <string name="level05">Grade II obesity.</string>
    <string name="level06">Grade III obesity.</string>

</resources>